After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645603 - incorrect polkit action for can_set checks
incorrect polkit action for can_set checks
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-03-23 17:50 UTC by Sebastien Bacher
Modified: 2011-03-28 11:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check for the correct action (1.45 KB, patch)
2011-03-23 17:50 UTC, Sebastien Bacher
committed Details | Review

Description Sebastien Bacher 2011-03-23 17:50:19 UTC
Created attachment 184160 [details] [review]
check for the correct action

The issue was described on https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/734425

""Time Settings" greyed out in preferences clock-applet."
Comment 2 Sebastien Bacher 2011-03-23 17:59:01 UTC
oh, some context on the version, that happens in Ubuntu using a GNOME 2.32 desktop with the new gsd datetime interface backported so it might not be an issue with gnome-panel 2.9x but the fix is still right
Comment 3 Rodrigo Moya 2011-03-28 11:04:30 UTC
Review of attachment 184160 [details] [review]:

Pushed to master