Check for correct PolicyKit action

https://bugzilla.gnome.org/show_bug.cgi?id=645603